# tuist

./: .all-contributorsrc  .coderabbit.yaml  .credo.exs  .dockerignore  .editorconfig  .env.dev.json  .env.example  .env.json  .eslintignore  .formatter.exs  .gitattributes  .gitignore  .gitmodules  .jazzy.yaml  .kodiak.toml  .mise.toml  .npmrc  .nvmrc  .optional.env.json  .package.resolved  .rgignore  .rtx.toml  .rubocop-http---shopify-github-io-ruby-style-guide-rubocop-yml  .rubocop.yml  .ruby-gemset  .sobelow-skips  .swift-format  .swift-format-version  .swift-version  .swiftformat  .swiftformat-version  .swiftlint.yaml  .swiftlint.yml  .taplo.toml  .tool-versions  .travis.yml  .trivyignore  .tuist-cloud-version  .tuist-dev-instance  .tuist-version  (+117 more)
cas-plugin/: AGENTS.md  Cargo.toml  mise.toml
cas-plugin/examples/: snapshot_probe.rs
cas-plugin/src/: analytics.rs  broker.rs  broker_proto.rs  lib.rs  prefetch.rs  proxy.rs  proxy_proto.rs  reapi.rs  remote.rs  token.rs  types.rs  upstream.rs
cas-plugin/tests/: batch_read_backpressure.rs  reactor_repro.rs
codebase-search/: AGENTS.md  Cargo.toml  Dockerfile  README.md  mise.toml  rust-toolchain.toml
codebase-search/src/: lib.rs  main.rs
kura/: .bazelrc  .dockerignore  .gitignore  .shellspec  AGENTS.md  BUILD.bazel  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.release  MODULE.bazel  README.md  cliff.toml  docker-compose.yml  mise.toml  rust-toolchain.toml  tuist.toml
kura/.cargo/: audit.toml
kura/bazel/: ci-kura-cache.sh  ci-oci.sh  ci-validate.sh  linux-build.sh  linux-dev.Dockerfile  local-ci.sh
kura/bazel/oci/: BUILD.bazel  bookworm_apt.lock.json  bookworm_apt.yaml  transition.bzl
kura/bazel/patches/: BUILD.bazel  lua-src-env-source-dir.patch
kura/bazel/smoke/: BUILD.bazel  main.rs
kura/benchmarks/: README.md  cas_ab.sh
kura/cla/: document.md  signatures.json
kura/docs/: architecture.md  bazel-migration-plan.md
kura/docs/proposals/: bootstrap-range-digest-anti-entropy.md
kura/mise/tasks/: bazel-compile.sh  bazel-repin.sh  clippy.sh  compile.sh  format.sh  lint-tests.sh  repin.sh  test-e2e.sh  test-unit.sh
kura/ops/: AGENTS.md
kura/ops/kind/: dev-cluster.yaml
kura/ops/loki/: config.yml
kura/ops/prometheus/: prometheus.yml
kura/ops/promtail/: config.yml
kura/ops/rollout/: gate.sh
kura/ops/tempo/: config.yml
kura/spec/: spec_helper.sh
kura/spec/e2e/: accelerated_serving_spec.sh  clients_spec.sh  cluster_spec.sh  default_namespace_spec.sh  discovery_spec.sh  docker-compose.accelerated.yml  docker-compose.high-concurrency-memory.yml  docker-compose.large-artifact.yml  docker-compose.memory-pressure.yml  extension_spec.sh  faults_spec.sh  grpc_upload_throughput_spec.sh  handoff_spec.sh  large_artifact_spec.sh  memory_pressure_spec.sh  mtls_spec.sh  rollout_spec.sh  support.sh  tenant_scope_spec.sh  tmp_budget_spec.sh
kura/src/: accelerated_file_serving.rs  analytics.rs  app.rs  bandwidth.rs  config.rs  constants.rs  enrollment.rs  extension.rs  failpoints.rs  file_cache.rs  geoip.rs  http.rs  io.rs  lib.rs  main.rs  memory.rs  mesh_heartbeat.rs  metrics.rs  mmap.rs  node_location.rs  peer_tls.rs  reapi.rs  registration.rs  replication.rs  runtime.rs  state.rs  store.rs  telemetry.rs  test_support.rs  usage.rs  utils.rs
kura/src/accelerated_file_serving/: tests.rs
kura/src/analytics/: tests.rs
kura/src/app/: tests.rs
kura/src/artifact/: class.rs  client.rs  kind.rs  manifest.rs  metadata.rs  mod.rs  producer.rs  segment_location_record.rs  storage_kind.rs
kura/src/bandwidth/: tests.rs
kura/src/config/: tests.rs
kura/src/enrollment/: tests.rs
kura/src/extension/: mod.rs  tests.rs
kura/src/geoip/: tests.rs
kura/src/http/: tests.rs
kura/src/io/: mod.rs  tests.rs
kura/src/memory/: cgroup.rs  mod.rs  pools.rs  pressure.rs  reservation.rs  tests.rs
kura/src/mesh_heartbeat/: tests.rs
kura/src/metrics/: tests.rs
kura/src/multipart/: error.rs  mod.rs  part.rs  upload.rs
kura/src/node_location/: tests.rs
kura/src/reapi/: admission.rs  mod.rs  protobuf_shape.rs  service.rs  snapshot.rs  tests.rs
kura/src/registration/: tests.rs
kura/src/replication/: mod.rs  operation.rs  outbox_message.rs  tests.rs
kura/src/runtime/: tests.rs
kura/src/segment/: generation.rs  mod.rs  reader.rs  reference.rs  state.rs
kura/src/state/: tests.rs
kura/src/store/: tests.rs
kura/src/telemetry/: tests.rs
kura/src/usage/: tests.rs
kura/src/utils/: tests.rs
kura/test/: BUILD.bazel  mincore_probe.c
kura/test/e2e/: docker-compose.default-namespace.yml  docker-compose.discovery.yml  docker-compose.extension.yml  docker-compose.mtls.yml  kura_compatibility_rollout.sh  kura_helm_kind.sh
kura/test/mincore_probe_rs/: Cargo.toml
kura/website/: .gitignore  AGENTS.md  aube-lock.yaml  eleventy.config.mjs  package.json
kura/website/functions/: _middleware.js
kura/website/scripts/: generate-social-images.mjs
kura/website/src/: agent-markdown.11ty.js  llms-full.11ty.js  llms.11ty.js  sitemap.njk
native/tuist_native/: Cargo.toml  README.md
native/tuist_native/src/: lib.rs  license.rs  s3.rs
native/tuistcloud_native/: Cargo.toml  README.md
native/tuistcloud_native/src/: lib.rs  license.rs  s3.rs
swifterpm/: .gitignore  AGENTS.md  BUILD.bazel  Info.plist  LICENSE  MODULE.bazel  Package.resolved  Package.swift  README.md  blick.toml  cliff.toml  extensions.bzl  mise.toml
swifterpm/Sources/swifterpm/: CLI.swift  Cache.swift  Environment.swift  FileSystemSupport.swift  GitHub.swift  GitLab.swift  Manifest.swift  Models.swift  PackageInfoCache.swift  Registry.swift  Remote.swift  ResolutionProgress.swift  Resolve.swift  Restore.swift  SemVer.swift  Support.swift  SwifterPM.swift
swifterpm/Sources/swifterpmCLI/: main.swift
swifterpm/Tests/swifterpmTests/: CLIRunnerTests.swift  CLITests.swift  CacheTests.swift  FileSystemSupportTests.swift  FixtureResolutionTests.swift  GitHubTests.swift  GitLabTests.swift  MainTests.swift  ManifestTests.swift  ModelsTests.swift  PackageInfoCacheTests.swift  RegistryTests.swift  main.swift  (+8 more)
swifterpm/e2e/: resolution_spec.sh
(+119504 files in other folders)
