[package]
name = "tuist-cas-plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "tuist_cas_plugin"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tuist-cas-broker"
path = "src/bin/tuist-cas-broker.rs"

[[bin]]
name = "bench-read"
path = "src/bin/bench-read.rs"

[dependencies]
libloading = "0.8"
zstd = "0.13"
libc = "0.2"
bazel-remote-apis = "0.27.0"
tonic = "0.14.2"
prost = "0.14.1"
sha2 = "0.10"
tokio = { version = "1.48", features = ["rt-multi-thread", "time"] }

[profile.release]
opt-level = 2
lto = "thin"
