[package]
name = "kura"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
base64 = "0.22.1"
bazel-remote-apis = "0.27.0"
bytes = "1.11.0"
deadpool = { version = "0.13.0", default-features = false, features = ["unmanaged"] }
futures-util = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
http-body-util = "0.1.3"
libc = "0.2.177"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
mlua = { version = "0.11.4", features = ["async", "lua54", "send", "serialize", "vendored"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.1", default-features = false, features = ["http-proto", "reqwest-blocking-client", "trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
prost = "0.14.1"
prometheus-client = "0.24.1"
reqwest = { version = "0.12.24", default-features = false, features = ["http2", "json", "rustls-tls", "stream"] }
rocksdb = { version = "0.24.0", default-features = false, features = ["bindgen-runtime", "lz4"] }
rustls = "0.23.35"
rustls-pemfile = "2.2.0"
sentry = { version = "0.47.0", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls", "tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tokio-util = { version = "0.7.17", features = ["io"] }
tonic = "0.14.2"
tracing = "0.1.41"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }

[dev-dependencies]
rcgen = "0.14.5"
tempfile = "3.23.0"
tower = { version = "0.5.2", features = ["util"] }
