"""Kura — distributed cache mesh (Rust).

Bazel foundation: workspace skeleton, the host Rust + C/C++ toolchains, and the
third-party crate graph — enough to build //:all (lib + binary + tests). Each
release arch is built natively on a runner of that arch (no cross-compilation),
so the build only ever uses the autodetected host toolchain. The runtime OCI
image (rules_oci/rules_pkg/rules_distroless + the geoip/apt layers) is added in a
later change; it is intentionally not part of this foundation.
"""

module(
    name = "kura",
)

bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "rules_cc", version = "0.2.17")

# Pin the Rust toolchain to match rust-toolchain.toml / mise.toml (1.94.1, edition 2024).
# Each arch is built natively on a runner of that arch, so only the host triple is
# needed — rules_rust registers it automatically (no extra_target_triples).
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.94.1"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# C/C++ for the -sys crates (rocksdb, aws-lc, jemalloc, lua) comes from the
# autodetected host cc toolchain on each runner. There is no cross C/C++ toolchain:
# a release arch is compiled on a runner of that arch, never cross-compiled.

# Third-party Rust dependencies, resolved from Cargo.toml / Cargo.lock.
# Repin after changing dependencies or annotations (Bazel 9 has no `bazel sync`):
#   CARGO_BAZEL_REPIN=1 bazel query '@crates//:all'
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

# mlua's `vendored` feature compiles Lua from source shipped in the `lua-src`
# crate, whose build script reads `env!("CARGO_MANIFEST_DIR")` — a compile-time
# path that no longer exists when the mlua-sys build script runs under Bazel.
# Instead of coaxing that build script, we compile Lua ourselves as a cc_library
# (//bazel/third_party/lua) from lua-src's vendored sources and link it:
#   1. Expose lua-src's C sources + headers as filegroups for the cc_library.
#   2. Disable mlua-sys's build script (it only locates/links Lua) and add the
#      cc_library to its deps, so Bazel handles the C build and linking.
# This touches no third-party Rust source and gives Lua a real Bazel target.
#
# Version coupling: the `lua-5.4.*` globs below track lua-src's vendored Lua 5.4 line, and
# bazel/third_party/lua/BUILD.bazel pins lua-src by its versioned canonical repo name. A lua-src
# bump can break both; `mise run bazel-repin [check]` resolves //bazel/third_party/lua:lua so the
# break surfaces in that ~1-min guard rather than deep in a bazel build.
crate.annotation(
    additive_build_file_content = """
filegroup(
    name = "lua_c_srcs",
    srcs = glob(["lua-5.4.*/*.c"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "lua_hdrs",
    srcs = glob(["lua-5.4.*/*.h"]),
    visibility = ["//visibility:public"],
)
""",
    crate = "lua-src",
)
crate.annotation(
    crate = "mlua-sys",
    gen_build_script = "off",
    # @@// is the canonical (main-repo) form, resolvable from the crate repo.
    deps = ["@@//bazel/third_party/lua:lua"],
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    lockfile = "//:Cargo.Bazel.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")
