[package]
name = "tuistcloud_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "tuistcloud_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
obfstr = "0.4.3"
rustler = "0.32.0"
base64 = "0.13"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
