[package]
name = "tuistcloud_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "tuistcloud_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
obfstr = "0.4.3"
rustler = "0.32.0"
base64 = "0.13"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-s3 = { git = "https://github.com/tuist/rust-s3.git", rev="b80b2314cdca50e097fefac40d6802986d4a8066", features = ["blocking"]}
aws-creds = "0.36.0"
http = "0.2.12"
