# Diagnostic only: reproduces kura's mmap page-cache-residency check
# (src/mmap.rs) with the exact crates and code path, to compare mincore
# residency across filesystems/runners. Remove with the mincore-probe CI job.
[package]
name = "mincore_probe_rs"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
libc = "0.2.177"
memmap2 = "0.9.10"

[profile.release]
opt-level = 2
